kubernetes/user-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
spec:
  strategy:
    type: Recreate
  replicas: 4
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      containers:
        - name: user-service
          image: rishisingh/user-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
